--- a/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
 <?import javafx.scene.web.*?>
 <?import javafx.scene.*?>
 <?import javafx.geometry.*?>
@@ -12,19 +13,29 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.AccueilOverviewController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="153.0" layoutY="14.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="153.0" AnchorPane.rightAnchor="135.0" AnchorPane.topAnchor="14.0">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="144.0" layoutY="94.0" text="Bienvenue sur le logiciel GestionProd" AnchorPane.leftAnchor="144.0" AnchorPane.rightAnchor="144.0" AnchorPane.topAnchor="95.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Label layoutX="403.0" layoutY="109.0" prefHeight="46.0" prefWidth="94.0" text="MENU" textAlignment="CENTER" AnchorPane.leftAnchor="403.0" AnchorPane.rightAnchor="403.0" AnchorPane.topAnchor="109.0">
+      <Label layoutX="403.0" layoutY="174.0" prefHeight="46.0" prefWidth="94.0" text="MENU" textAlignment="CENTER" AnchorPane.topAnchor="175.0">
          <font>
             <Font name="System Bold" size="31.0" />
          </font>
       </Label>
-      <Button fx:id="viewProd" layoutX="183.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
-      <Button fx:id="viewCommande" layoutX="183.0" layoutY="340.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
-      <Button fx:id="viewStock" layoutX="497.0" layoutY="192.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" />
-      <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="340.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" />
+      <Button fx:id="viewProd" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
+      <Button fx:id="viewCommande" layoutX="183.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
+      <Button fx:id="viewStock" layoutX="497.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" />
+      <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" />
+      <ImageView fitHeight="35.0" fitWidth="165.0" layoutX="14.0" layoutY="21.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
+         <image>
+            <Image url="./Pictures/miage.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="55.0" fitWidth="199.0" layoutX="687.0" layoutY="11.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="10.0">
+         <image>
+            <Image url="./Pictures/UT3.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
