--- a/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
@@ -18,15 +18,10 @@
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <Label layoutX="403.0" layoutY="174.0" prefHeight="46.0" prefWidth="94.0" text="MENU" textAlignment="CENTER" AnchorPane.topAnchor="175.0">
-         <font>
-            <Font name="System Bold" size="31.0" />
-         </font>
-      </Label>
-      <Button fx:id="viewProd" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." />
-      <Button fx:id="viewCommande" layoutX="183.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" />
-      <Button fx:id="viewStock" layoutX="497.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" />
-      <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" />
+      <Button fx:id="viewProd" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." AnchorPane.leftAnchor="183.0" />
+      <Button fx:id="viewCommande" layoutX="183.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Gestion des commandes" AnchorPane.leftAnchor="183.0" />
+      <Button fx:id="viewStock" layoutX="497.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" AnchorPane.rightAnchor="183.0" />
+      <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="362.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" AnchorPane.rightAnchor="183.0" />
       <ImageView fitHeight="35.0" fitWidth="165.0" layoutX="14.0" layoutY="21.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
          <image>
             <Image url="./Pictures/miage.png" />
