--- a/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/PersonnelOverview.fxml
@@ -8,23 +8,25 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.PersonnelOverviewController">
+<AnchorPane minHeight="500.0" minWidth="900.0" prefHeight="533.0" prefWidth="1060.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.miage.lcl.view.PersonnelOverviewController">
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="283.0" layoutY="14.0" text="Personnel" AnchorPane.leftAnchor="283.0" AnchorPane.rightAnchor="282.0" AnchorPane.topAnchor="10.0">
          <font>
             <Font name="System Bold" size="33.0" />
          </font>
       </Label>
-      <TableView fx:id="personneTable" layoutX="200.0" layoutY="150.0" prefHeight="200.0" prefWidth="500.0" AnchorPane.bottomAnchor="150.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="150.0">
+      <TableView fx:id="personneTable" layoutX="201.0" layoutY="140.0" prefHeight="246.0" prefWidth="571.0" AnchorPane.bottomAnchor="147.0" AnchorPane.leftAnchor="201.0" AnchorPane.rightAnchor="288.0" AnchorPane.topAnchor="140.0">
         <columns>
           <TableColumn fx:id="code" prefWidth="46.0" text="Code salarié" />
-            <TableColumn fx:id="nbH" prefWidth="75.0" text="Nombre d'heure" />
+            <TableColumn fx:id="nbH" prefWidth="75.0" text="Quota horraire" />
             <TableColumn fx:id="qualification" prefWidth="100.0" text="Qualification" />
+            <TableColumn fx:id="nbHdispo" prefWidth="75.0" text="Heures disponible" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
       <Button fx:id="viewAccueil" layoutX="14.0" layoutY="428.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Accueil" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" />
+      <Button fx:id="ficheSalarie" layoutX="819.0" layoutY="226.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="194.0" text="Voir la fiche salarié" AnchorPane.bottomAnchor="246.0" AnchorPane.leftAnchor="819.0" AnchorPane.rightAnchor="47.0" AnchorPane.topAnchor="226.0" />
    </children>
 </AnchorPane>
