--- a/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
+++ b/src/main/java/fr/miage/lcl/view/AccueilOverview.fxml
@@ -21,7 +21,7 @@
       <Button fx:id="viewProd" layoutX="183.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Chaine de Prod." AnchorPane.leftAnchor="183.0" />
       <Button fx:id="viewStock" layoutX="497.0" layoutY="235.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Stock" AnchorPane.rightAnchor="183.0" />
       <Button fx:id="viewPersonnel" layoutX="497.0" layoutY="364.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Personnel" AnchorPane.rightAnchor="183.0" AnchorPane.topAnchor="364.0" />
-      <ImageView fitHeight="35.0" fitWidth="165.0" layoutX="14.0" layoutY="21.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
+<!--       <ImageView fitHeight="35.0" fitWidth="165.0" layoutX="14.0" layoutY="21.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="20.0">
          <image>
             <Image url="./Pictures/miage.png" />
          </image>
@@ -30,7 +30,7 @@
          <image>
             <Image url="./Pictures/UT3.png" />
          </image>
-      </ImageView>
+      </ImageView> -->
       <Button fx:id="affecterPersonnel" layoutX="183.0" layoutY="364.0" mnemonicParsing="false" prefHeight="85.0" prefWidth="220.0" text="Affecter le personnel" />
    </children>
 </AnchorPane>
